--- a/wiki/Syntax2.wiki
+++ b/wiki/Syntax2.wiki
@@ -1,17 +1,13 @@
-= <a name="page_start"/>페이지 내부에서의 링크 =
-
-WikiSyntax is identified and linked automatically
-
-Wikipage is not identified, so if you have a page named [Wikipage] you
-need to link it explicitly.
-
-If the WikiSyntax page is actually about reindeers, you can provide a
-description, so that people know you're actually linking to a page on
-[WikiSyntax reindeer flotillas].
-
-If you want to metion !WikiSyntax without it being autolinked, use an
-exclamation mark to prevent linking.
-
-어쩌라는 걸까 [page_start]
-
+= 내부 페이지 링크 =
+어떻게 하는지 모르겠다.
 ----
+= 외부 페이지 링크 =
+ * 단순형 http://www.google.com
+ * 다른 이름으로 [http://www.google.com 구글 홈]
+ * 그림 삽입
+
+http://code.google.com/images/code_sm.png
+
+ * 그림 링크
+
+ [http://code.google.com http://code.google.com/images/code_sm_png]
