--- a/wiki/Syntax2.wiki
+++ b/wiki/Syntax2.wiki
@@ -4,10 +4,9 @@
 = 외부 페이지 링크 =
  * 단순형 http://www.google.com
  * 다른 이름으로 [http://www.google.com 구글 홈]
- * 그림 삽입
+ * 그림 삽입: .png, .gif, .jpg, .jpeg
 
 http://code.google.com/images/code_sm.png
 
  * 그림 링크
-
- [http://code.google.com http://code.google.com/images/code_sm_png]
+[http://code.google.com http://code.google.com/images/code_sm.png]
