--- a/wiki/Syntax2.wiki
+++ b/wiki/Syntax2.wiki
@@ -2,8 +2,9 @@
 = 내부 페이지 링크 =
 Wiki의 각 페이지는 영문숫자로만 이름을 정할 수 있다.
 따라서, 각 페이지에 대해 링크를 설정할 수 있다.
- # [MoinMoin_Syntex]
- # [MoinMoin_Syntex 이전 페이지]
+ # [Syntax1]
+ # [Syntax3]
+ # [Syntax1 이전 페이지], [Syntax3 다음 페이지]
 
 ----
 = 외부 페이지 링크 =
