--- a/wiki/Syntax1.wiki
+++ b/wiki/Syntax1.wiki
@@ -1,4 +1,5 @@
 #summary Wiki syntax 글꼴과 문단 연습
+#labels Featured,Phase-Implementation
 
 _이태릭체_, *강조*, ^윗첨자^, ,,밑첨자,,,~~취소선~~
 _이태릭체인데 *강조*를 하다가 ~~취소선~~을 섞은 경우_
