--- a/wiki/Syntax4.wiki
+++ b/wiki/Syntax4.wiki
@@ -1,12 +1,16 @@
 #summary Navigation
 
-== Wiki 샘플 ==
- * [http://code.google.com/p/doctype/w/list?can=2&q= doctype]
+<wiki:toc max_depth="1" />
+
+= <a href="#make_ref">참조 위치 만들기</a> =
+{{{
+<a href="#참조될이름">내용</a>
+}}}
+ * [#make_ref 참조 위치 만들기]로 가기
 
 = 참조 사이트 =
  * [http://support.googlecode.com support]
  * [http://doctype.googlecode.com doctype]
  * [http://code.google.com/p/doctype/wiki/Articles 사이드바 샘플]
 
-== Inline table of contents ==
-<wiki:toc max_depth="1" />
+= Inline table of contents =
