Edited wiki page through web user interface.

--- a/wiki/Syntax4.wiki
+++ b/wiki/Syntax4.wiki
@@ -14,3 +14,12 @@
  * [http://code.google.com/p/doctype/wiki/Articles 사이드바 샘플]
 
 = Inline table of contents =
+
+
+
+
+
+
+
+
+ * [#make_ref 참조 위치 만들기]로 가기
