Edited wiki page through web user interface.

--- a/wiki/Syntax4.wiki
+++ b/wiki/Syntax4.wiki
@@ -15,6 +15,43 @@
 
 = Inline table of contents =
 
+빈라인
+
+빈라인
+
+빈라인
+
+빈라인
+
+빈라인
+
+빈라인
+
+빈라인
+
+빈라인
+
+빈라인
+
+빈라인
+
+빈라인
+
+빈라인
+
+빈라인
+
+빈라인
+
+빈라인
+
+빈라인
+
+빈라인
+
+빈라인
+
+빈라인
 
 
 
