--- a/wiki/Syntax4.wiki
+++ b/wiki/Syntax4.wiki
@@ -2,7 +2,7 @@
 
 <wiki:toc max_depth="1" />
 
-= <a href="#make_ref">참조 위치 만들기</a> =
+= <a id="#make_ref">참조 위치 만들기</a> =
 {{{
 <a href="#참조될이름">내용</a>
 }}}
