--- a/wiki/Syntax4.wiki
+++ b/wiki/Syntax4.wiki
@@ -3,7 +3,7 @@
 <wiki:toc max_depth="1" />
 
 = 참조 위치 만들기 =
-<h id="#make_ref">참조 위치 만들기</h> =
+<h2 id="make_ref">참조 위치 만들기</h2> =
 {{{
 <a href="#참조될이름">내용</a>
 }}}
