--- a/wiki/Syntax4.wiki
+++ b/wiki/Syntax4.wiki
@@ -9,7 +9,7 @@
 {{{
 <a href="#참조될이름">내용</a>
 }}}
- * [#make_ref 참조 위치 만들기]로 가기
+ * <a href="#make_ref">참조 위치 만들기</a>로 가기
 
 = 참조 사이트 =
  * [http://support.googlecode.com support]
@@ -62,4 +62,4 @@
 
 
 
- * [#make_ref 참조 위치 만들기]로 가기
+ * <a href="#make_ref">참조 위치 만들기</a>로 가기
