--- a/wiki/Syntax4.wiki
+++ b/wiki/Syntax4.wiki
@@ -2,12 +2,12 @@
 
 <wiki:toc max_depth="1" />
 
-= <a name="make_ref">참조 위치 만들기</a> =
+= 참조위치 만들기 =
 
 {{{
 <a href="#참조될이름">내용</a>
 }}}
- * [#make_ref 참조 위치 만들기]로 가기
+ * [#참조위치_만들기 참조 위치 만들기]로 가기
 
 = 참조 사이트 =
  * [http://support.googlecode.com support]
@@ -58,5 +58,4 @@
 
 
 
-
- * [#make_ref 참조 위치 만들기]로 가기
+ * [#참조위치_만들기 참조 위치 만들기]로 가기
