Edited wiki page through web user interface.

--- a/wiki/Syntax4.wiki
+++ b/wiki/Syntax4.wiki
@@ -7,7 +7,7 @@
 {{{
 <a href="#참조될이름">내용</a>
 }}}
- * [#참조위치_만들기 참조 위치 만들기]로 가기
+ * [#참조위치_만들기] 참조 위치 만들기로 가기
 
 = 참조 사이트 =
  * [http://support.googlecode.com support]
