--- a/wiki/Syntax4.wiki
+++ b/wiki/Syntax4.wiki
@@ -1,5 +1,24 @@
 #summary 네비게이션
 
+위키에서의 모든 헤더들은 자동으로 `<a name="헤더문장">헤더문장</a>`이 추가된다. 
+헤더문장에 있는 공백문자는 `_`으로 대체되어 name으로 설정된다. 즉,
+{{{
+== 헤더 문장 ==
+은 {{{<h><a name="헤더_문장">헤더 문장</a></h>으로 변환된다.
+}}}
+따라서, 위의 헤더에 링크를 걸려면, `[#헤더_문장 헤더 문장]`으로 표현하면 된다.
+
+그런데, 유감스럽게도 한글은 지원이 되지 않는다.
+
+다음 예제를 통해 실험할 수 있다.
+
+== 헤더 문장 ==
+
+== Header Letters ==
+
+ * [#헤더_문장 헤더 문장]
+ * [#Header_Letters Header Letters]
+
 <wiki:toc max_depth="1" />
 
 = Making Reference =
