Edited wiki page through web user interface.

--- a/wiki/Syntax4.wiki
+++ b/wiki/Syntax4.wiki
@@ -4,7 +4,7 @@
 헤더문장에 있는 공백문자는 `_`으로 대체되어 name으로 설정된다. 즉,
 {{{
 == 헤더 문장 ==
-은 {{{<h><a name="헤더_문장">헤더 문장</a></h>으로 변환된다.
+은 {{{<h2><a name="헤더_문장"/>헤더 문장</h2>으로 변환된다.
 }}}
 따라서, 위의 헤더에 링크를 걸려면, `[#헤더_문장 헤더 문장]`으로 표현하면 된다.
 
@@ -12,12 +12,14 @@
 
 다음 예제를 통해 실험할 수 있다.
 
-== 헤더 문장 입니다 ==
+== h헤더 문장 입니다 ==
 
 == Header Letters ==
 
- * [#헤더_문장_입니다 헤더 문장]
+ * [#h헤더_문장_입니다 헤더 문장]
  * [#Header_Letters Header Letters]
+
+예제에서 보이다시피 `[#헤더_문장_입니다` 구문의 변환에서 버그가 있다.
 
 <wiki:toc max_depth="1" />
 
