--- a/wiki/Syntax4.wiki
+++ b/wiki/Syntax4.wiki
@@ -1,5 +1,6 @@
 #summary 네비게이션
 
+== 페이지 내부에 대해 링크 걸기 ==
 위키에서의 모든 헤더들은 자동으로 `<a name="헤더문장">헤더문장</a>`이 추가된다. 
 헤더문장에 있는 공백문자는 `_`으로 대체되어 name으로 설정된다. 즉,
 {{{
@@ -12,15 +13,22 @@
 
 다음 예제를 통해 실험할 수 있다.
 
-== h헤더 문장 입니다 ==
+== 헤더 문장 입니다 ==
 
 == Header Letters ==
 
- * [#h헤더_문장_입니다 헤더 문장]
+ * [#헤더_문장_입니다 헤더 문장]
  * [#Header_Letters Header Letters]
 
 예제에서 보이다시피 `[#헤더_문장_입니다` 구문의 변환에서 버그가 있다.
+ * <a href="#헤더_문장_입니다">헤더 문장</a>
+ * <a href="#Header_Letters">헤더 문장</a>
 
+== 링크 목차 만들기 ==
+{{{
+<wiki:toc max_depth="1" />를 삽입하면 간단하게 링크 목차를 만들 수 있다.
+여기서 링크 목차는 
+}}}
 <wiki:toc max_depth="1" />
 
 = Making Reference =
