--- a/wiki/Syntax4.wiki
+++ b/wiki/Syntax4.wiki
@@ -44,7 +44,7 @@ HTML tag인 <h1>,<h2>,,,<h5>를 사용한다.
 위키 문서의 왼쪽에 메뉴를 나타내고 싶다면 `#sidebar`를 이용한다.
 
 먼저, 사이드 메뉴의 내용을 담고 있을 Wiki 문서를 만들어야 한다. 이 Wiki 문서의 Page Name을
-"SideBarMenu"로 정했다면, 이 파일의 내용은 아마도 다음과 같을 것이다.
+"!SideBarMenu"로 정했다면, 이 파일의 내용은 아마도 다음과 같을 것이다.
 {{{
  * [Page_Intro 개요]
   * [Page_Intro#What_Is 위키란 무엇인가?]
@@ -57,12 +57,10 @@ HTML tag인 <h1>,<h2>,,,<h5>를 사용한다.
   * [Ex_Sample4 예제 4]
 }}}
 위 내용을 보면 Wiki 다수의 Wiki 문서들이 필요하다는 것을 알 수 있다.
-즉, Page_Intro, WikiSyntax, Ex_Contents, Ex_Sample1, Ex_Sample2, Ex_Sample3, Ex_Sample4 등의 Wiki 문서들이다.
-
-
+즉, !Page_Intro, !WikiSyntax, !Ex_Contents, !Ex_Sample1, !Ex_Sample2, !Ex_Sample3, !Ex_Sample4 등의 Wiki 문서들이다.
 
 ----
 <h1>참조 사이트</h1>
- * [http://support.googlecode.com support]
- * [http://doctype.googlecode.com doctype]
+ * [http://support.googlecode.com google code support]
+ * [http://doctype.googlecode.com google code doctype]
  * [http://code.google.com/p/doctype/wiki/Articles 사이드 네비게이션 샘플]
