--- a/wiki/Syntax4.wiki
+++ b/wiki/Syntax4.wiki
@@ -3,8 +3,7 @@
 <h1>페이지 내부에 대해 링크 걸기</h1>
 위키에서의 모든 헤더들은 자동으로 `<a name="헤더문장">헤더문장</a>`이 추가된다. 
 헤더문장에 있는 공백문자는 `_`으로 대체되어 name으로 설정된다. 즉,
-{{{
-== 헤더 문장 ==
+{{{== 헤더 문장 ==
 은 {{{<h2><a name="헤더_문장"/>헤더 문장</h2>으로 변환된다.
 }}}
 따라서, 위의 헤더에 링크를 걸려면, `[#헤더_문장 헤더 문장]`으로 표현하면 된다.
@@ -23,8 +22,7 @@
 예제에서 보이다시피 `[#헤더_문장_입니다` 구문의 변환에서 버그가 있다.
 ----
 <h1>링크 목차 만들기</h1>
-{{{
-<wiki:toc max_depth="1" />를 삽입하면 간단하게 링크 목차를 만들 수 있다.
+{{{<wiki:toc max_depth="1" />를 삽입하면 간단하게 링크 목차를 만들 수 있다.
 max_depth="1"이면 = 헤더 = 들이 자동으로 링크 목차로 등록되고,
 max_depth="2"이면 = 헤더 = 와 == 헤더 == 들이 등록된다.
 만일, 헤더처럼 보이되 링크 목차에 포함되지 않게 하려면,
