Edited wiki page through web user interface.

--- a/wiki/Syntax4.wiki
+++ b/wiki/Syntax4.wiki
@@ -3,8 +3,8 @@
 <h1>페이지 내부에 대해 링크 걸기</h1>
 위키에서의 모든 헤더들은 자동으로 `<a name="헤더문장">헤더문장</a>`이 추가된다. 
 헤더문장에 있는 공백문자는 `_`으로 대체되어 name으로 설정된다. 즉,
-`== 헤더 문장 ==`
-은 {{{<h2><a name="헤더_문장"/>헤더 문장</h2>으로 변환된다.
+`== 헤더 문장 ==`은
+{{{<h2><a name="헤더_문장"/>헤더 문장</h2>으로 변환된다.
 }}}
 따라서, 위의 헤더에 링크를 걸려면, `[#헤더_문장 헤더 문장]`으로 표현하면 된다.
 
