--- a/wiki/Syntax4.wiki
+++ b/wiki/Syntax4.wiki
@@ -23,13 +23,15 @@
 예제에서 보이다시피 `[#헤더_문장_입니다` 구문의 변환에서 버그가 있다.
 ----
 <h1>링크 목차 만들기</h1>
-{{{<wiki:toc max_depth="1" />를 삽입하면 간단하게 링크 목차를 만들 수 있다.
+{{{
+<wiki:toc max_depth="1" />를 삽입하면 간단하게 링크 목차를 만들 수 있다.
 max_depth="1"이면 = 헤더 = 들이 자동으로 링크 목차로 등록되고,
 max_depth="2"이면 = 헤더 = 와 == 헤더 == 들이 등록된다.
 만일, 헤더처럼 보이되 링크 목차에 포함되지 않게 하려면,
 HTML tag인 <h1>,<h2>,,,<h5>를 사용한다.
 아래 예제에서 HTML Header는 <h1>을 사용했기 때문에 링크 목차에 포함되지 않고 있다.
 }}}
+
 <wiki:toc max_depth="1" />
 
 <h1>HTML Header</h1>
