--- a/wiki/Syntax4.wiki
+++ b/wiki/Syntax4.wiki
@@ -60,6 +60,8 @@ HTML tag인 <h1>,<h2>,,,<h5>를 사용한다.
 위 내용을 보면 Wiki 다수의 Wiki 문서들이 필요하다는 것을 알 수 있다.
 즉, !Page_Intro, !WikiSyntax, !Ex_Contents, !Ex_Sample1, !Ex_Sample2, !Ex_Sample3, !Ex_Sample4 등의 Wiki 문서들이다.
 
+필요한 문서가 모두 제작되었으면, 이 문서의 시작 라인부근에 `#sidebar SideBarMenu`를 삽입한다.
+
 ----
 <h1>참조 사이트</h1>
  * [http://support.googlecode.com google code support]
