--- a/wiki/Syntax6.wiki
+++ b/wiki/Syntax6.wiki
@@ -2,4 +2,26 @@
 
 = You are good=
 
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
 [#You_are_good You are good].
