Edited wiki page through web user interface.

--- a/wiki/Syntax6.wiki
+++ b/wiki/Syntax6.wiki
@@ -24,4 +24,68 @@ blank line
 
 blank line
 
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
+blank line
+
  * [#You_are_good You are good].
