Edited wiki page through web user interface.

--- a/wiki/PowerPointSkill.wiki
+++ b/wiki/PowerPointSkill.wiki
@@ -1,8 +1,9 @@
 #summary 파워포인트 활용 예
 
 === 슬라이드 쇼 시작 ===
- * *F5* `:` 처음 슬라이드부터 시작
- * *<Shift-F5>* `:` 현재 슬라이브부터 시작
+ * <*_F5_*>: 처음 슬라이드부터 시작
+ * <*_Shift-F5_*>: 현재 슬라이브부터 시작
 
 === 슬라이드 쇼 진행 중 ===
- * *<B>* `:` 
+ * <*_B_*>: 까만 화면으로 전환 토글, 청중들의 시선을 강사에게 돌리고 싶을 때 유용하다.
+ * <*_번호+엔터_*>: 슬라이드 번호로 바로 간다. 시간이 없어서 중간 단계를 생략하고 싶을 때 유용하다.
