Edited wiki page through web user interface.

--- a/wiki/Syntax5.wiki
+++ b/wiki/Syntax5.wiki
@@ -1,14 +1,29 @@
 #summary 기타 문법들
 #labels Featured,Phase-Implementation
 
+== `*` < 영숫자단어의 이상한 표현 ==
 {{{
-*<문장>*
-*<<문장>>*
-*<<<문장>>>*
-*<<<<문장>>>>*
+----
+*<HelloWorld>*: 추가된 문장
+----
+*<Hello World>*: 추가된 문장
+----
+*<1234>*: 추가된 문장
+----
+*<12,34>*: 추가된 문장
+----
+*<안녕세상>*: 추가된 문장
+----
 }}}
 
-*<문장>*: 뭐지
-*<<문장>>*: 뭐지
-*<<<문장>>>*: 뭐지
-*<<<<문장>>>>*: 뭐지
+----
+*<HelloWorld>*: 추가된 문장
+----
+*<Hello World>*: 추가된 문장
+----
+*<1234>*: 추가된 문장
+----
+*<12.34>*: 추가된 문장
+----
+*<안녕세상>*: 추가된 문장
+----
